# AI6G-SpectrumSim

./: .gitignore  LICENSE  README.md  README.zh-CN.md  environment.yml  main.py  pyproject.toml  requirements.txt
configs/: default.yaml  per_rb_max_channel.yaml  per_rb_pf.yaml
docs/: experiment_report.md  metrics.md  model_architecture.md
results/: README.md
results/final/: final_metrics.csv  hybrid_teacher_sweep.csv  model_evolution.csv  per_rb_model_comparison.csv  summary.csv  summary_multi_seed.csv
scripts/: plot_results.py  run_ablation.sh  run_final_experiment.sh
src/: algorithms.py  environment.py  mlp_model.py  train.py  visualization.py
tests/: test_algorithms.py  test_environment.py  test_model_shapes.py
